--- a/styles/me5e.scss
+++ b/styles/me5e.scss
@@ -16,7 +16,7 @@ body {
     background-image: url("../assets/images/spacebg.jpg");
     background-repeat: repeat;
     background-size: auto;
-    font-family: "Signika", sans-serif;
+    font-family: "Oxanium Light", sans-serif;
     font-size: 14px;
     box-shadow: 0 0 50vw #000 inset;
   }
