--- a/styles/main.css
+++ b/styles/main.css
@@ -7,13 +7,17 @@
     font-family: 'Oxanium Bold';
     font-style: normal;
     src: url('../assets/fonts/Oxanium-Bold.ttf') format('woff2');
-} 
-body {
+}
+.-emu-layout body.-emu .window-app .window-content {
+    font-family: 'Oxanium Bold' !important;
+}
+
+body .vtt {
     width: 100vw;
     height: 100vh;
     margin: 0;
     overflow: hidden;
-    background-image: url("../assets/images/spacebg.jpg");
+    background-image: ("../assets/images/spacebg.jpg");
     background-repeat: repeat;
     background-size: auto;
     font-family: "Oxanium Light", sans-serif;
