--- a/styles/main.css
+++ b/styles/main.css
@@ -12,15 +12,24 @@
     font-family: 'Oxanium Bold' !important;
 }
 
-body .vtt {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    overflow: hidden;
-    background-image: ("../assets/images/spacebg.jpg");
+body.game {
+    background-image: url("../assets/images/img-earth.webp");
     background-repeat: repeat;
     background-size: auto;
-    font-family: "Oxanium Light", sans-serif;
-    font-size: 14px;
-    box-shadow: 0 0 50vw #000 inset;
+    font-family: "Oxanium Light", "Oxanium Bold", sans-serif;
   }
+
+
+#sidebar {
+    background-color: #000033;
+}
+
+button {
+    font-size: var(--font-size-12);
+    font-family: "Oxanium Light";
+}
+
+.dnd5e2.sheet.actor.character .sheet-header {
+    background-image: transparent url("../assets/images/texture-synthesis.webp") no-repeat center / cover
+}
+
